--- a/app/frontend/frontend/index.html
+++ b/app/frontend/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/bird-svgrepo-com.svg" />
+    <link rel="icon" type="image/svg+xml" href="/bird-white.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bird Classification</title>
   </head>
